fix layout issue

--- a/Demo/assets/index.css
+++ b/Demo/assets/index.css
@@ -28,9 +28,9 @@
 .navFix {
   background: #FFF;
   position: fixed;
-  left: 10px;
+  left: 0px;
   top: 0px;
-  width: 280px;
+  width: 265px;
   _position: absolute;
   top: expression((offsetParent.scrollTop)+0);
   z-index: 2;
